--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,11 @@ a {
     padding-block: 8rem;
   }
 }
+@media (min-width: 992px) {
+  .section {
+    padding-block: 6rem;
+  }
+}
 .section__title {
   text-align: center;
   text-transform: uppercase;
@@ -105,6 +110,11 @@ a {
 @media (min-width: 769px) {
   .section__title {
     font-size: 38px;
+  }
+}
+@media (min-width: 992px) {
+  .section__title {
+    font-size: 32px;
   }
 }
 .section__title::before {
@@ -143,6 +153,11 @@ a {
     line-height: 32px;
   }
 }
+@media (min-width: 992px) {
+  .section__paragraph {
+    font-size: 18px;
+  }
+}
 
 .container {
   padding-inline: 20px;
@@ -154,8 +169,13 @@ a {
 }
 @media (min-width: 769px) {
   .container {
-    width: 730px;
+    width: 720px;
     margin-inline: auto;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    width: 960px;
   }
 }
 
@@ -191,10 +211,22 @@ a {
     font-size: 20px;
   }
 }
+@media (min-width: 992px) {
+  .button {
+    width: 180px;
+    height: 50px;
+    font-size: 16px;
+  }
+}
 
 .alt {
   background-color: transparent;
   color: var(--first-color-dark);
+}
+@media (min-width: 992px) {
+  .alt {
+    width: 200px;
+  }
 }
 .alt i {
   font-size: 1.75rem;
@@ -207,13 +239,7 @@ a {
 }
 
 header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   height: 70px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 @media (min-width: 769px) {
   header {
@@ -229,14 +255,52 @@ header .nav {
           align-items: center;
   width: 100%;
 }
-header .nav__logo {
+header .nav__logo img {
   width: 97px;
   height: 43px;
 }
 @media (min-width: 769px) {
-  header .nav__logo {
+  header .nav__logo img {
     width: 140px;
     height: 55px;
+  }
+}
+@media (min-width: 992px) {
+  header .nav__logo img {
+    width: 120px;
+    height: 50px;
+  }
+}
+header .nav__links {
+  display: none;
+}
+@media (min-width: 992px) {
+  header .nav__links {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    list-style: none;
+    gap: 30px;
+  }
+  header .nav__links li a {
+    font-size: 18px;
+    font-family: var(--body-font);
+    font-weight: var(--font-semi-bold);
+    position: relative;
+  }
+  header .nav__links li a::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    width: 0;
+    height: 5px;
+    background-color: var(--first-color-dark);
+    -webkit-transition: 0.2s linear;
+    transition: 0.2s linear;
+  }
+  header .nav__links li a:hover::after, header .nav__links li a.active::after {
+    width: 100%;
   }
 }
 header .nav__toggle {
@@ -248,6 +312,26 @@ header .nav__toggle {
     font-size: 2.25rem;
   }
 }
+@media (min-width: 992px) {
+  header .nav__toggle {
+    display: none;
+  }
+}
+header .nav__connexion {
+  display: none;
+}
+@media (min-width: 992px) {
+  header .nav__connexion {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    border-radius: 5px;
+    font-size: 16px;
+  }
+  header .nav__connexion i {
+    margin-left: 10px;
+  }
+}
 
 .home {
   margin-top: 100px;
@@ -257,6 +341,23 @@ header .nav__toggle {
   .home {
     margin-top: 120px;
   }
+}
+@media (min-width: 992px) {
+  .home {
+    text-align: initial;
+    margin-top: 80px;
+  }
+}
+.home .flex__home {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 35px;
+     -moz-column-gap: 35px;
+          column-gap: 35px;
 }
 .home__title {
   color: var(--first-color-very-dark);
@@ -270,6 +371,11 @@ header .nav__toggle {
     font-size: 3.625rem;
   }
 }
+@media (min-width: 992px) {
+  .home__title {
+    font-size: 42px;
+  }
+}
 .home__paragraph {
   font-size: 1rem;
   font-family: var(--body-font);
@@ -279,6 +385,12 @@ header .nav__toggle {
   .home__paragraph {
     font-size: 25px;
     line-height: 52px;
+  }
+}
+@media (min-width: 992px) {
+  .home__paragraph {
+    font-size: 18px;
+    line-height: 38px;
   }
 }
 .home__buttons {
@@ -305,6 +417,23 @@ header .nav__toggle {
     margin-top: 35px;
   }
 }
+@media (min-width: 992px) {
+  .home__buttons {
+    -webkit-column-gap: 20px;
+       -moz-column-gap: 20px;
+            column-gap: 20px;
+    margin-inline: initial;
+  }
+}
+.home__image {
+  height: 440px;
+  display: none;
+}
+@media (min-width: 992px) {
+  .home__image {
+    display: block;
+  }
+}
 
 .about {
   margin-top: 60px;
@@ -322,6 +451,28 @@ header .nav__toggle {
     row-gap: 50px;
   }
 }
+@media (min-width: 992px) {
+  .about .flex__about {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-column-gap: 50px;
+       -moz-column-gap: 50px;
+            column-gap: 50px;
+    margin-top: 90px;
+  }
+}
+@media (min-width: 992px) {
+  .about .flex__about .about__content {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+}
 .about .flex__about .about__content p.about__paragraph {
   text-align: center;
   line-height: 32px;
@@ -333,6 +484,14 @@ header .nav__toggle {
     font-size: 25px;
     line-height: 42px;
     margin-bottom: 20px;
+  }
+}
+@media (min-width: 992px) {
+  .about .flex__about .about__content p.about__paragraph {
+    font-size: 16px;
+    line-height: 32px;
+    text-align: initial;
+    margin-bottom: 15px;
   }
 }
 .about .flex__about .about__content .about__btn {
@@ -347,6 +506,14 @@ header .nav__toggle {
     margin-top: 25px;
   }
 }
+@media (min-width: 992px) {
+  .about .flex__about .about__content .about__btn {
+    width: 195px;
+    height: 50px;
+    font-size: 17px;
+    margin-inline: initial;
+  }
+}
 .about .flex__about .about__content .about__btn i {
   margin-left: 8px;
   font-size: 15px;
@@ -357,18 +524,39 @@ header .nav__toggle {
     font-size: 18px;
   }
 }
-.about .flex__about .about__image {
+@media (min-width: 992px) {
+  .about .flex__about .about__content .about__btn i {
+    font-size: 16px;
+  }
+}
+@media (min-width: 992px) {
+  .about .flex__about .about__container {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+}
+.about .flex__about .about__container .about__image {
   margin-inline: auto;
 }
 @media (max-width: 430px) {
-  .about .flex__about .about__image {
+  .about .flex__about .about__container .about__image {
     width: 100%;
   }
 }
 @media (min-width: 769px) {
-  .about .flex__about .about__image {
+  .about .flex__about .about__container .about__image {
     width: 100%;
     height: 596px;
+  }
+}
+@media (min-width: 992px) {
+  .about .flex__about .about__container .about__image {
+    width: 450px;
+    height: 400px;
   }
 }
 
@@ -432,7 +620,7 @@ header .nav__toggle {
     width: 400px !important;
   }
 }
-.works .works__content .work .work__number {
+.works .works__content .work__number {
   background: url(../svg/works/circle.svg) no-repeat;
   width: 65px;
   height: 65px;
@@ -454,13 +642,13 @@ header .nav__toggle {
   display: none;
 }
 @media (min-width: 769px) {
-  .works .works__content .work .work__number {
+  .works .works__content .work__number {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
   }
 }
-.works .works__content .work .work__title {
+.works .works__content .work__title {
   font-family: var(--title-font);
   font-weight: var(--font-bold);
   font-size: 22px;
@@ -472,56 +660,56 @@ header .nav__toggle {
   line-height: 32px;
 }
 @media (max-width: 430px) {
-  .works .works__content .work .work__title {
+  .works .works__content .work__title {
     font-size: 20px;
     letter-spacing: 0;
     margin-bottom: 15px;
   }
 }
 @media (min-width: 769px) {
-  .works .works__content .work .work__title {
+  .works .works__content .work__title {
     font-size: 26px;
     margin-bottom: 30px;
     width: 505px;
     margin-inline: auto;
   }
 }
-.works .works__content .work .work__image {
+.works .works__content .work__image {
   margin-inline: auto;
   display: block;
   margin-bottom: 25px;
 }
 @media (max-width: 430px) {
-  .works .works__content .work .work__image {
+  .works .works__content .work__image {
     width: 100%;
     height: 180px;
     margin-bottom: 15px;
   }
 }
 @media (min-width: 769px) {
-  .works .works__content .work .work__image {
+  .works .works__content .work__image {
     width: 359px;
     height: 262px;
     margin-bottom: 30px;
   }
 }
-.works .works__content .work .work__paragraph {
+.works .works__content .work__paragraph {
   text-align: center;
   font-family: var(--paragraph-font);
   line-height: 32px;
   letter-spacing: 0.02em;
 }
 @media (min-width: 769px) {
-  .works .works__content .work .work__paragraph {
+  .works .works__content .work__paragraph {
     font-size: 20px;
   }
 }
-.works .works__content .work:last-of-type .work__paragraph {
+.works .works__content .work:last-of-type .works .works__content .work__paragraph {
   font-size: 15px;
   letter-spacing: 0;
 }
 @media (min-width: 769px) {
-  .works .works__content .work:last-of-type .work__paragraph {
+  .works .works__content .work:last-of-type .works .works__content .work__paragraph {
     font-size: 20px;
     letter-spacing: 0.02em;
   }
@@ -562,6 +750,12 @@ header .nav__toggle {
     gap: 45px;
   }
 }
+@media (min-width: 992px) {
+  .services .flex__services {
+    gap: 20px;
+    margin-top: 40px;
+  }
+}
 .services .flex__services .service {
   width: 348px;
   text-align: center;
@@ -584,6 +778,13 @@ header .nav__toggle {
     -webkit-box-flex: initial;
         -ms-flex: initial;
             flex: initial;
+  }
+}
+@media (min-width: 992px) {
+  .services .flex__services .service:last-of-type {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
   }
 }
 .services .flex__services .service .image__container {
@@ -621,6 +822,12 @@ header .nav__toggle {
     max-width: 100%;
   }
 }
+@media (min-width: 992px) {
+  .services .flex__services .service .image__container {
+    width: 200px;
+    height: 200px;
+  }
+}
 .services .flex__services .service__title {
   font-size: 1.75rem;
   font-family: var(--body-font);
@@ -632,6 +839,11 @@ header .nav__toggle {
 @media (max-width: 430px) {
   .services .flex__services .service__title {
     font-size: 1.5rem;
+  }
+}
+@media (min-width: 992px) {
+  .services .flex__services .service__title {
+    font-size: 26px;
   }
 }
 .services .flex__services .service__paragraph {
@@ -648,6 +860,11 @@ header .nav__toggle {
 @media (min-width: 769px) {
   .services .flex__services .service__paragraph {
     font-size: 18px;
+  }
+}
+@media (min-width: 992px) {
+  .services .flex__services .service__paragraph {
+    font-size: 16px;
   }
 }
 
@@ -696,6 +913,12 @@ header .nav__toggle {
     margin-top: 75px;
   }
 }
+@media (min-width: 992px) {
+  .formules .flex__formules {
+    gap: 40px;
+    margin-top: 95px;
+  }
+}
 .formules .flex__formules .formule {
   width: 303px;
   height: 300px;
@@ -708,6 +931,13 @@ header .nav__toggle {
 }
 .formules .flex__formules .formule:nth-of-type(2) .formule__icon {
   margin-left: 10px;
+}
+@media (min-width: 992px) {
+  .formules .flex__formules .formule {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+  }
 }
 .formules .flex__formules .formule .formule__title {
   margin-block: 20px;
@@ -765,6 +995,13 @@ header .nav__toggle {
     margin-top: 70px;
   }
 }
+@media (min-width: 992px) {
+  .aventages .flex__aventages {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 25px 20px;
+  }
+}
 .aventages .flex__aventages .aventage {
   position: relative;
   -o-object-fit: cover;
@@ -779,6 +1016,11 @@ header .nav__toggle {
 @media (min-width: 769px) {
   .aventages .flex__aventages .aventage {
     height: 495px;
+  }
+}
+@media (min-width: 992px) {
+  .aventages .flex__aventages .aventage {
+    height: 300px;
   }
 }
 .aventages .flex__aventages .aventage .aventage__overlay {
@@ -818,6 +1060,11 @@ header .nav__toggle {
     font-size: 32px;
     line-height: 38px;
     width: 610px;
+  }
+}
+@media (min-width: 992px) {
+  .aventages .flex__aventages .aventage .aventage__overlay .aventage__paragraph {
+    font-size: 25px;
   }
 }
 .aventages .flex__aventages .aventage .aventage__img {
@@ -872,6 +1119,12 @@ header .nav__toggle {
     margin-left: 0;
   }
 }
+@media (min-width: 992px) {
+  .footer .footer__logo {
+    height: 50px;
+    width: initial;
+  }
+}
 .footer .flex__footer {
   margin-top: 60px;
   width: 295px;
@@ -897,12 +1150,29 @@ header .nav__toggle {
     width: initial;
   }
 }
+@media (min-width: 992px) {
+  .footer .flex__footer {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-column-gap: 20px;
+       -moz-column-gap: 20px;
+            column-gap: 20px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
 .footer .flex__footer .footer_title {
   font-family: var(--body-font);
   font-weight: var(--font-bold);
   font-size: 1.625rem;
   letter-spacing: 0.03em;
   margin-bottom: 25px;
+}
+@media (min-width: 992px) {
+  .footer .flex__footer .footer_title {
+    font-size: 22px;
+  }
 }
 .footer .flex__footer .flex__info {
   display: -webkit-box;
@@ -940,6 +1210,13 @@ header .nav__toggle {
     font-size: 18px;
   }
 }
+@media (min-width: 992px) {
+  .footer .flex__footer .flex__info p,
+  .footer .flex__footer .flex__info a {
+    font-size: 18px;
+    line-height: 28px;
+  }
+}
 .footer .social__media {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -955,6 +1232,11 @@ header .nav__toggle {
 @media (min-width: 769px) {
   .footer .social__media {
     margin-top: 125px;
+  }
+}
+@media (min-width: 992px) {
+  .footer .social__media {
+    margin-top: 80px;
   }
 }
 .footer .social__media i {
@@ -983,6 +1265,11 @@ header .nav__toggle {
   .footer .footer__copyright {
     font-size: 18px;
     margin-top: 25px;
+  }
+}
+@media (min-width: 992px) {
+  .footer .footer__copyright {
+    font-size: 16px;
   }
 }
 /*# sourceMappingURL=style.css.map */
