--- a/assets/scss/components/sections/_about.scss
+++ b/assets/scss/components/sections/_about.scss
@@ -7,7 +7,16 @@
 		@include mediaSM {
 			row-gap: 50px;
 		}
+		@include mediaMD {
+			flex-direction: row;
+			align-items: center;
+			column-gap: 50px;
+			margin-top: 90px;
+		}
 		.about__content {
+			@include mediaMD {
+				order: 2;
+			}
 			p.about__paragraph {
 				text-align: center;
 				line-height: 32px;
@@ -17,6 +26,12 @@
 					font-size: 25px;
 					line-height: 42px;
 					margin-bottom: 20px;
+				}
+				@include mediaMD {
+					font-size: 16px;
+					line-height: 32px;
+					text-align: initial;
+					margin-bottom: 15px;
 				}
 			}
 			.about__btn {
@@ -28,6 +43,12 @@
 					height: 56px;
 					margin-top: 25px;
 				}
+				@include mediaMD {
+					width: 195px;
+					height: 50px;
+					font-size: 17px;
+					margin-inline: initial;
+				}
 				i {
 					margin-left: 8px;
 					font-size: 15px;
@@ -35,17 +56,30 @@
 						margin-left: 10px;
 						font-size: 18px;
 					}
+					@include mediaMD {
+						font-size: 16px;
+					}
 				}
 			}
 		}
-		.about__image {
-			margin-inline: auto;
-			@include mediaXXS {
-				width: 100%;
+		.about__container {
+			@include mediaMD {
+				display: inline-flex;
+				order: 1;
 			}
-			@include mediaSM {
-				width: 100%;
-				height: 596px;
+			.about__image {
+				margin-inline: auto;
+				@include mediaXXS {
+					width: 100%;
+				}
+				@include mediaSM {
+					width: 100%;
+					height: 596px;
+				}
+				@include mediaMD {
+					width: 450px;
+					height: 400px;
+				}
 			}
 		}
 	}
