--- a/assets/scss/components/sections/_home.scss
+++ b/assets/scss/components/sections/_home.scss
@@ -4,6 +4,15 @@
 	@include mediaSM {
 		margin-top: 120px;
 	}
+	@include mediaMD {
+		text-align: initial;
+		margin-top: 80px;
+	}
+	.flex__home {
+		display: flex;
+		align-items: center;
+		column-gap: 35px;
+	}
 	&__title {
 		color: var(--first-color-very-dark);
 		font-size: 2.25rem;
@@ -13,6 +22,9 @@
 		@include mediaSM {
 			font-size: 3.625rem;
 		}
+		@include mediaMD {
+			font-size: 42px;
+		}
 	}
 	&__paragraph {
 		font-size: 1rem;
@@ -21,6 +33,10 @@
 		@include mediaSM {
 			font-size: 25px;
 			line-height: 52px;
+		}
+		@include mediaMD {
+			font-size: 18px;
+			line-height: 38px;
 		}
 	}
 	&__buttons {
@@ -34,6 +50,17 @@
 		}
 		@include mediaSM {
 			margin-top: 35px;
+		}
+		@include mediaMD {
+			column-gap: 20px;
+			margin-inline: initial;
+		}
+	}
+	&__image {
+		height: 440px;
+		display: none;
+		@include mediaMD {
+			display: block;
 		}
 	}
 }
