--- a/assets/scss/components/sections/_services.scss
+++ b/assets/scss/components/sections/_services.scss
@@ -14,6 +14,10 @@
 			align-items: start;
 			gap: 45px;
 		}
+		@include mediaMD {
+			gap: 20px;
+			margin-top: 40px;
+		}
 		.service {
 			width: 348px;
 			text-align: center;
@@ -27,6 +31,9 @@
 			&:last-of-type {
 				@include mediaSM {
 					flex: initial;
+				}
+				@include mediaMD {
+					flex: 1;
 				}
 			}
 			.image__container {
@@ -53,6 +60,10 @@
 						max-width: 100%;
 					}
 				}
+				@include mediaMD {
+					width: 200px;
+					height: 200px;	
+				}
 			}
 			&__title {
 				font-size: 1.75rem;
@@ -63,6 +74,9 @@
 				margin-bottom: 20px;
 				@include mediaXXS {
 					font-size: 1.5rem;
+				}
+				@include mediaMD {
+					font-size: 26px;
 				}
 			}
 			&__paragraph {
@@ -75,6 +89,9 @@
 				}
 				@include mediaSM {
 					font-size: 18px;
+				}
+				@include mediaMD {
+					font-size: 16px;
 				}
 			}
 		}
