--- a/assets/scss/globals/_brakpoints.scss
+++ b/assets/scss/globals/_brakpoints.scss
@@ -4,8 +4,11 @@
 		padding-inline: 10px;
 	}
 	@include mediaSM {
-		width: 730px;
+		width: 720px;
 		margin-inline: auto;
+	}
+	@include mediaMD {
+		width: 960px;
 	}
 }
 
