--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,13 +14,6 @@
   --paragraph-font: "Karma", serif;
   --font-semi-bold: 600;
   --font-bold: 700;
-  --mb-0-5: 0.5rem;
-  --mb-0-75: 0.75rem;
-  --mb-1: 1rem;
-  --mb-1-5: 1.5rem;
-  --mb-2: 2rem;
-  --mb-2-5: 2.5rem;
-  --mb-3: 3rem;
   --z-fixed: 100;
   --btn-shadow: 1px 1px 15px rgba(0, 0, 0, 0.2);
 }
@@ -117,6 +110,11 @@ a {
     font-size: 32px;
   }
 }
+@media (min-width: 1200px) {
+  .section__title {
+    font-size: 38px;
+  }
+}
 .section__title::before {
   position: absolute;
   width: 60%;
@@ -158,6 +156,11 @@ a {
     font-size: 18px;
   }
 }
+@media (min-width: 1200px) {
+  .section__paragraph {
+    font-size: 20px;
+  }
+}
 
 .container {
   padding-inline: 20px;
@@ -176,6 +179,11 @@ a {
 @media (min-width: 992px) {
   .container {
     width: 960px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1140px;
   }
 }
 
@@ -218,6 +226,13 @@ a {
     font-size: 16px;
   }
 }
+@media (min-width: 1200px) {
+  .button {
+    width: 215px;
+    height: 55px;
+    font-size: 18px;
+  }
+}
 
 .alt {
   background-color: transparent;
@@ -226,6 +241,11 @@ a {
 @media (min-width: 992px) {
   .alt {
     width: 200px;
+  }
+}
+@media (min-width: 1200px) {
+  .alt {
+    width: 220px;
   }
 }
 .alt i {
@@ -348,6 +368,11 @@ header .nav__connexion {
     margin-top: 80px;
   }
 }
+@media (min-width: 1200px) {
+  .home {
+    margin-top: 80px;
+  }
+}
 .home .flex__home {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -358,6 +383,13 @@ header .nav__connexion {
   -webkit-column-gap: 35px;
      -moz-column-gap: 35px;
           column-gap: 35px;
+}
+@media (min-width: 1200px) {
+  .home__content {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 500px;
+            flex: 1 0 500px;
+  }
 }
 .home__title {
   color: var(--first-color-very-dark);
@@ -376,6 +408,13 @@ header .nav__connexion {
     font-size: 42px;
   }
 }
+@media (min-width: 1200px) {
+  .home__title {
+    font-size: 52px;
+    line-height: 65px;
+    margin-top: 0;
+  }
+}
 .home__paragraph {
   font-size: 1rem;
   font-family: var(--body-font);
@@ -391,6 +430,12 @@ header .nav__connexion {
   .home__paragraph {
     font-size: 18px;
     line-height: 38px;
+  }
+}
+@media (min-width: 1200px) {
+  .home__paragraph {
+    font-size: 20px;
+    line-height: 40px;
   }
 }
 .home__buttons {
@@ -434,6 +479,12 @@ header .nav__connexion {
     display: block;
   }
 }
+@media (min-width: 1200px) {
+  .home__image {
+    height: initial;
+    width: 595px;
+  }
+}
 
 .about {
   margin-top: 60px;
@@ -466,6 +517,13 @@ header .nav__connexion {
     margin-top: 90px;
   }
 }
+@media (min-width: 1200px) {
+  .about .flex__about {
+    -webkit-column-gap: 30px;
+       -moz-column-gap: 30px;
+            column-gap: 30px;
+  }
+}
 @media (min-width: 992px) {
   .about .flex__about .about__content {
     -webkit-box-ordinal-group: 3;
@@ -494,6 +552,16 @@ header .nav__connexion {
     margin-bottom: 15px;
   }
 }
+@media (min-width: 1200px) {
+  .about .flex__about .about__content p.about__paragraph {
+    font-size: 18px;
+    line-height: 34px;
+  }
+}
+.about .flex__about .about__content p.about__paragraph span {
+  font-weight: var(--font-bold);
+  color: var(--first-color-dark);
+}
 .about .flex__about .about__content .about__btn {
   width: 195px;
   margin-top: 20px;
@@ -512,6 +580,11 @@ header .nav__connexion {
     height: 50px;
     font-size: 17px;
     margin-inline: initial;
+  }
+}
+@media (min-width: 1200px) {
+  .about .flex__about .about__content .about__btn {
+    font-size: 18px;
   }
 }
 .about .flex__about .about__content .about__btn i {
@@ -541,10 +614,13 @@ header .nav__connexion {
 }
 .about .flex__about .about__container .about__image {
   margin-inline: auto;
+  width: 100%;
+  height: initial;
 }
 @media (max-width: 430px) {
   .about .flex__about .about__container .about__image {
     width: 100%;
+    height: initial;
   }
 }
 @media (min-width: 769px) {
@@ -555,8 +631,13 @@ header .nav__connexion {
 }
 @media (min-width: 992px) {
   .about .flex__about .about__container .about__image {
-    width: 450px;
-    height: 400px;
+    width: 435px;
+    height: initial;
+  }
+}
+@media (min-width: 1200px) {
+  .about .flex__about .about__container .about__image {
+    width: 580px;
   }
 }
 
@@ -596,6 +677,14 @@ header .nav__connexion {
     margin-top: 100px;
   }
 }
+@media (min-width: 1200px) {
+  .works .works__content {
+    grid-template-columns: repeat(2, 550px);
+    -webkit-column-gap: 40px;
+       -moz-column-gap: 40px;
+            column-gap: 40px;
+  }
+}
 .works .works__content .work {
   background-color: white;
   padding: 25px;
@@ -616,8 +705,43 @@ header .nav__connexion {
   .works .works__content .work:first-of-type .work__title {
     margin-top: 10px;
   }
+}
+@media (min-width: 769px) and (min-width: 1200px) {
+  .works .works__content .work:first-of-type .work__title {
+    width: 550px;
+  }
+}
+@media (min-width: 769px) and (min-width: 1200px) {
+  .works .works__content .work:first-of-type .work__image {
+    height: initial;
+    width: 390px;
+  }
+}
+@media (min-width: 769px) and (min-width: 769px) {
   .works .works__content .work:nth-of-type(3) .work__title {
     width: 400px !important;
+  }
+}
+@media (min-width: 769px) and (min-width: 1200px) {
+  .works .works__content .work:nth-of-type(3) .work__title {
+    text-indent: 40px;
+    width: 420px !important;
+  }
+}
+@media (min-width: 769px) {
+  .works .works__content .work:nth-of-type(3) .work__image {
+    width: 315px;
+    height: initial;
+  }
+}
+@media (min-width: 769px) and (min-width: 1200px) {
+  .works .works__content .work:last-of-type .work__title {
+    margin-left: 20px;
+  }
+}
+@media (min-width: 1200px) {
+  .works .works__content .work {
+    width: initial;
   }
 }
 .works .works__content .work__number {
@@ -674,6 +798,11 @@ header .nav__connexion {
     margin-inline: auto;
   }
 }
+@media (min-width: 1200px) {
+  .works .works__content .work__title {
+    font-size: 24px;
+  }
+}
 .works .works__content .work__image {
   margin-inline: auto;
   display: block;
@@ -702,6 +831,11 @@ header .nav__connexion {
 @media (min-width: 769px) {
   .works .works__content .work__paragraph {
     font-size: 20px;
+  }
+}
+@media (min-width: 1200px) {
+  .works .works__content .work__paragraph {
+    font-size: 18px;
   }
 }
 .works .works__content .work:last-of-type .works .works__content .work__paragraph {
@@ -754,6 +888,13 @@ header .nav__connexion {
   .services .flex__services {
     gap: 20px;
     margin-top: 40px;
+  }
+}
+@media (min-width: 1200px) {
+  .services .flex__services {
+    -webkit-column-gap: 35px;
+       -moz-column-gap: 35px;
+            column-gap: 35px;
   }
 }
 .services .flex__services .service {
@@ -828,6 +969,12 @@ header .nav__connexion {
     height: 200px;
   }
 }
+@media (min-width: 1200px) {
+  .services .flex__services .service .image__container {
+    width: 270px;
+    height: 270px;
+  }
+}
 .services .flex__services .service__title {
   font-size: 1.75rem;
   font-family: var(--body-font);
@@ -844,6 +991,11 @@ header .nav__connexion {
 @media (min-width: 992px) {
   .services .flex__services .service__title {
     font-size: 26px;
+  }
+}
+@media (min-width: 1200px) {
+  .services .flex__services .service__title {
+    font-size: 28px;
   }
 }
 .services .flex__services .service__paragraph {
@@ -865,6 +1017,11 @@ header .nav__connexion {
 @media (min-width: 992px) {
   .services .flex__services .service__paragraph {
     font-size: 16px;
+  }
+}
+@media (min-width: 1200px) {
+  .services .flex__services .service__paragraph {
+    font-size: 19px;
   }
 }
 
@@ -919,6 +1076,13 @@ header .nav__connexion {
     margin-top: 95px;
   }
 }
+@media (min-width: 1200px) {
+  .formules .flex__formules {
+    -webkit-column-gap: 60px;
+       -moz-column-gap: 60px;
+            column-gap: 60px;
+  }
+}
 .formules .flex__formules .formule {
   width: 303px;
   height: 300px;
@@ -937,6 +1101,11 @@ header .nav__connexion {
     -webkit-box-flex: 1;
         -ms-flex: 1;
             flex: 1;
+  }
+}
+@media (min-width: 1200px) {
+  .formules .flex__formules .formule {
+    padding-inline: 20px;
   }
 }
 .formules .flex__formules .formule .formule__title {
@@ -979,6 +1148,12 @@ header .nav__connexion {
 .aventages {
   margin-top: 60px;
 }
+@media (min-width: 1200px) {
+  .aventages .container {
+    width: initial;
+    padding-inline: 25px;
+  }
+}
 .aventages .flex__aventages {
   margin-top: 40px;
   display: -webkit-box;
@@ -1002,6 +1177,11 @@ header .nav__connexion {
     gap: 25px 20px;
   }
 }
+@media (min-width: 1200px) {
+  .aventages .flex__aventages {
+    gap: 45px 30px;
+  }
+}
 .aventages .flex__aventages .aventage {
   position: relative;
   -o-object-fit: cover;
@@ -1023,6 +1203,11 @@ header .nav__connexion {
     height: 300px;
   }
 }
+@media (min-width: 1200px) {
+  .aventages .flex__aventages .aventage {
+    height: 400px;
+  }
+}
 .aventages .flex__aventages .aventage .aventage__overlay {
   position: absolute;
   width: 100%;
@@ -1038,6 +1223,11 @@ header .nav__connexion {
       -ms-flex-pack: center;
           justify-content: center;
   padding-inline: 10px;
+}
+@media (min-width: 1200px) {
+  .aventages .flex__aventages .aventage .aventage__overlay {
+    padding-inline: 25px;
+  }
 }
 .aventages .flex__aventages .aventage .aventage__overlay .aventage__paragraph {
   width: 340px;
@@ -1067,6 +1257,12 @@ header .nav__connexion {
     font-size: 25px;
   }
 }
+@media (min-width: 1200px) {
+  .aventages .flex__aventages .aventage .aventage__overlay .aventage__paragraph {
+    font-size: 32px;
+    line-height: 42px;
+  }
+}
 .aventages .flex__aventages .aventage .aventage__img {
   width: 100%;
   height: 100%;
@@ -1086,7 +1282,7 @@ header .nav__connexion {
   width: 100%;
   height: 50px;
   background-color: var(--footer-color);
-  top: -50px;
+  top: -49px;
   left: 0;
   -webkit-clip-path: polygon(0 0, 0% 100%, 100% 100%);
   clip-path: polygon(0 0, 0% 100%, 100% 100%);
@@ -1126,7 +1322,7 @@ header .nav__connexion {
   }
 }
 .footer .flex__footer {
-  margin-top: 60px;
+  margin-top: 80px;
   width: 295px;
   margin-inline: auto;
   display: -webkit-box;
@@ -1136,7 +1332,7 @@ header .nav__connexion {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  row-gap: 60px;
+  row-gap: 50px;
 }
 @media (min-width: 769px) {
   .footer .flex__footer {
@@ -1165,7 +1361,7 @@ header .nav__connexion {
 .footer .flex__footer .footer_title {
   font-family: var(--body-font);
   font-weight: var(--font-bold);
-  font-size: 1.625rem;
+  font-size: 24px;
   letter-spacing: 0.03em;
   margin-bottom: 25px;
 }
@@ -1200,7 +1396,7 @@ header .nav__connexion {
 .footer .flex__footer .flex__info p,
 .footer .flex__footer .flex__info a {
   font-family: var(--paragraph-font);
-  font-size: 22px;
+  font-size: 20px;
   line-height: 32px;
   letter-spacing: 0.03em;
 }
