--- a/assets/scss/components/sections/_about.scss
+++ b/assets/scss/components/sections/_about.scss
@@ -13,6 +13,9 @@
 			column-gap: 50px;
 			margin-top: 90px;
 		}
+		@include mediaLG {
+			column-gap: 30px;
+		}
 		.about__content {
 			@include mediaMD {
 				order: 2;
@@ -33,6 +36,14 @@
 					text-align: initial;
 					margin-bottom: 15px;
 				}
+				@include mediaLG {
+					font-size: 18px;
+					line-height: 34px;
+				}
+				span {
+					font-weight: var(--font-bold);
+					color: var(--first-color-dark);
+				}
 			}
 			.about__btn {
 				width: 195px;
@@ -48,6 +59,9 @@
 					height: 50px;
 					font-size: 17px;
 					margin-inline: initial;
+				}
+				@include mediaLG {
+					font-size: 18px;
 				}
 				i {
 					margin-left: 8px;
@@ -69,16 +83,22 @@
 			}
 			.about__image {
 				margin-inline: auto;
+				width: 100%;
+				height: initial;
 				@include mediaXXS {
 					width: 100%;
+					height: initial;
 				}
 				@include mediaSM {
 					width: 100%;
 					height: 596px;
 				}
 				@include mediaMD {
-					width: 450px;
-					height: 400px;
+					width: 435px;
+					height: initial;
+				}
+				@include mediaLG {
+					width: 580px;
 				}
 			}
 		}
