--- a/assets/scss/components/sections/_formules.scss
+++ b/assets/scss/components/sections/_formules.scss
@@ -35,6 +35,9 @@
 			gap: 40px;
 			margin-top: 95px;
 		}
+		@include mediaLG {
+			column-gap: 60px;
+		}
 		.formule {
 			width: 303px;
 			height: 300px;
@@ -48,6 +51,9 @@
 			}
 			@include mediaMD {
 				flex: 1;
+			}
+			@include mediaLG {
+				padding-inline: 20px;
 			}
 			.formule__title {
 				margin-block: 20px;
