--- a/assets/scss/components/sections/_services.scss
+++ b/assets/scss/components/sections/_services.scss
@@ -18,6 +18,9 @@
 			gap: 20px;
 			margin-top: 40px;
 		}
+		@include mediaLG {
+			column-gap: 35px;
+		}
 		.service {
 			width: 348px;
 			text-align: center;
@@ -64,6 +67,10 @@
 					width: 200px;
 					height: 200px;	
 				}
+				@include mediaLG {
+					width: 270px;
+					height: 270px;
+				}
 			}
 			&__title {
 				font-size: 1.75rem;
@@ -77,6 +84,9 @@
 				}
 				@include mediaMD {
 					font-size: 26px;
+				}
+				@include mediaLG {
+					font-size: 28px;
 				}
 			}
 			&__paragraph {
@@ -92,6 +102,9 @@
 				}
 				@include mediaMD {
 					font-size: 16px;
+				}
+				@include mediaLG {
+					font-size: 19px;
 				}
 			}
 		}
