--- a/assets/scss/globals/_layout.scss
+++ b/assets/scss/globals/_layout.scss
@@ -70,6 +70,9 @@ a {
 		@include mediaMD {
 			font-size: 32px;
 		}
+		@include mediaLG {
+			font-size: 38px;
+		}
 		&::before {
 			position: absolute;
 			width: 60%;
@@ -104,6 +107,9 @@ a {
 		}
 		@include mediaMD {
 			font-size: 18px;
+		}
+		@include mediaLG {
+			font-size: 20px;
 		}
 	}
 }
