--- a/assets/scss/components/sections/_home.scss
+++ b/assets/scss/components/sections/_home.scss
@@ -14,7 +14,10 @@
 	.flex__home {
 		display: flex;
 		align-items: center;
-		column-gap: 35px;
+		column-gap: 30px;
+		@include mediaLG {
+			column-gap: 40px;
+		}
 	}
 	&__content {
 		@include mediaLG {
