--- a/assets/scss/globals/_variables.scss
+++ b/assets/scss/globals/_variables.scss
@@ -11,8 +11,14 @@
 	--first-color-rgb-very-dark: rgba(77, 132, 78, 0.65);
 	--first-color-rgb-dark: rgba(117, 165, 117, 0.65);
 
+	// secondary color
+	--secondary-color-light: #ffb3ff;
+
 	// footer color
 	--footer-color: #325733;
+
+	// about image grey color
+	--grey-color: #f2f2f2;
 
 	//========== Font and typography ==========
 	// .5rem = 8px | 1rem = 16px
