--- a/assets/scss/components/sections/_formules.scss
+++ b/assets/scss/components/sections/_formules.scss
@@ -46,6 +46,7 @@
 			box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
 			background-color: white;
 			padding: 30px 15px;
+			transition: 300ms ease-in;
 			&:nth-of-type(2) .formule__icon {
 				margin-left: 10px;
 			}
@@ -55,7 +56,16 @@
 			@include mediaLG {
 				padding-inline: 20px;
 			}
-			.formule__title {
+			&:hover {
+				background-color: var(--first-color-dark);
+			}
+			&__icon path {
+				transition: 300ms ease-in;
+			}
+			&:hover .formule__icon path {
+				stroke: white;
+			}
+			&__title {
 				margin-block: 20px;
 				font-size: 24px;
 				font-family: var(--body-font);
@@ -64,13 +74,19 @@
 				letter-spacing: 0.05em;
 				margin-left: 20px;
 				text-transform: capitalize;
+				transition: 300ms ease-in;
 			}
-			.formule__paragraph {
+			&:hover .formule__title,
+			&:hover .formule__paragraph {
+				color: white;
+			}
+			&__paragraph {
 				font-family: var(--paragraph-font);
 				letter-spacing: 0.02em;
 				line-height: 27px;
 				font-size: 1.125rem;
 				margin-left: 20px;
+				transition: 300ms ease-in;
 			}
 		}
 	}
