add mobile menu & fix some bugs & add header animation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@
   --font-semi-bold: 600;
   --font-bold: 700;
   --z-fixed: 100;
-  --btn-shadow: 1px 1px 15px rgba(0, 0, 0, 0.2);
+  --btn-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
 }
 
 /*=============== BASE ===============*/
@@ -166,6 +166,7 @@ a {
 
 .container {
   padding-inline: 20px;
+  width: 100%;
 }
 @media (max-width: 430px) {
   .container {
@@ -194,8 +195,6 @@ a {
   height: 50px;
   background-color: var(--first-color-dark);
   border: 2px solid var(--first-color-dark);
-  -webkit-box-shadow: var(--btn-shadow);
-          box-shadow: var(--btn-shadow);
   border-radius: 35px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -217,8 +216,8 @@ a {
   transition: 300ms ease-in;
 }
 .button:hover {
-  background-color: var(--first-color-base);
-  border: 2px solid var(--first-color-base);
+  -webkit-box-shadow: var(--btn-shadow);
+          box-shadow: var(--btn-shadow);
 }
 @media (min-width: 769px) {
   .button {
@@ -246,9 +245,6 @@ a {
   background-color: transparent;
   color: var(--first-color-dark);
 }
-.alt:hover, .alt:hover i {
-  color: white;
-}
 @media (min-width: 992px) {
   .alt {
     width: 200px;
@@ -262,8 +258,6 @@ a {
 .alt i {
   font-size: 1.75rem;
   margin-right: 8px;
-  -webkit-transition: 180ms ease-in;
-  transition: 180ms ease-in;
 }
 @media (min-width: 769px) {
   .alt i {
@@ -271,13 +265,31 @@ a {
   }
 }
 
+.scroll-header {
+  position: fixed;
+  width: 100%;
+  -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+  top: 0;
+  margin: auto;
+  background-color: white;
+  padding-block: 20px;
+  z-index: var(--z-fixed);
+  -webkit-transition: 300ms ease-out;
+  transition: 300ms ease-out;
+  padding-block: 40px;
+}
+
 header {
   height: 70px;
-}
-@media (min-width: 769px) {
-  header {
-    height: initial;
-  }
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-transition: 300ms ease-out;
+  transition: 300ms ease-out;
 }
 header .nav {
   -webkit-box-pack: justify;
@@ -304,41 +316,114 @@ header .nav__logo img {
     height: 50px;
   }
 }
+header .nav .show-menu {
+  top: 13%;
+}
 header .nav__links {
-  display: none;
+  position: fixed;
+  background-color: white;
+  -webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
+  padding: 40px 0;
+  width: 80%;
+  top: -100%;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  -webkit-transition: 300ms ease-out;
+  transition: 300ms ease-out;
+  border-radius: 32px;
+  z-index: var(--z-fixed);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  row-gap: 24px;
+  list-style: none;
+  color: black;
+}
+@media (min-width: 620px) and (max-width: 768px) {
+  header .nav__links {
+    width: 60%;
+  }
+}
+@media (min-width: 769px) {
+  header .nav__links {
+    width: 60%;
+  }
 }
 @media (min-width: 992px) {
   header .nav__links {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    list-style: none;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    position: initial;
+    width: initial;
+    padding: initial;
+    -webkit-box-shadow: initial;
+            box-shadow: initial;
+    background-color: initial;
+    border-radius: initial;
+    color: black;
     gap: 30px;
   }
+  header .nav__links .nav__close {
+    display: none;
+  }
+}
+header .nav__links .nav__close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+}
+header .nav__links .nav__close i {
+  font-size: 22px;
+}
+header .nav__links li a {
+  font-size: 16px;
+  font-family: var(--body-font);
+  font-weight: var(--font-semi-bold);
+  position: relative;
+}
+@media (min-width: 769px) {
   header .nav__links li a {
     font-size: 18px;
-    font-family: var(--body-font);
-    font-weight: var(--font-semi-bold);
-    position: relative;
   }
-  header .nav__links li a::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: -10px;
-    width: 0;
-    height: 5px;
-    background-color: var(--first-color-dark);
-    -webkit-transition: 0.2s linear;
-    transition: 0.2s linear;
+}
+@media (min-width: 992px) {
+  header .nav__links li a {
+    font-size: 18px;
   }
-  header .nav__links li a:hover::after, header .nav__links li a.active::after {
-    width: 100%;
-  }
+}
+header .nav__links li a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  width: 0;
+  height: 5px;
+  background-color: var(--first-color-dark);
+  -webkit-transition: 0.2s linear;
+  transition: 0.2s linear;
+}
+header .nav__links li a:hover::after, header .nav__links li a.active::after {
+  width: 100%;
 }
 header .nav__toggle {
   font-size: 2rem;
-  color: hsla(0deg, 0%, 0%, 0.9);
+  color: black;
+  cursor: pointer;
 }
 @media (min-width: 769px) {
   header .nav__toggle {
@@ -378,12 +463,12 @@ header .nav__connexion {
 @media (min-width: 992px) {
   .home {
     text-align: initial;
-    margin-top: 80px;
+    margin-top: 60px;
   }
 }
 @media (min-width: 1200px) {
   .home {
-    margin-top: 80px;
+    margin-top: 50px;
   }
 }
 .home .flex__home {
@@ -724,8 +809,8 @@ header .nav__connexion {
 }
 .works .works__content .work:hover {
   background-color: var(--first-color-base);
-  -webkit-box-shadow: 0px 0px 6px 6px rgba(0, 77, 1, 0.5);
-          box-shadow: 0px 0px 6px 6px rgba(0, 77, 1, 0.5);
+  -webkit-box-shadow: 0px 0px 6px 6px rgba(0, 77, 1, 0.3);
+          box-shadow: 0px 0px 6px 6px rgba(0, 77, 1, 0.3);
 }
 @media (max-width: 430px) {
   .works .works__content .work {
