--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -317,22 +317,20 @@ header .nav__logo img {
   }
 }
 header .nav .show-menu {
-  top: 13%;
+  right: 0;
 }
 header .nav__links {
   position: fixed;
   background-color: white;
-  -webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: -10px 0 10px rgba(0, 0, 0, 0.2);
+          box-shadow: -10px 0 10px rgba(0, 0, 0, 0.2);
   padding: 40px 0;
-  width: 80%;
-  top: -100%;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
+  width: 85%;
+  height: 100vh;
+  top: 0;
+  right: -100%;
   -webkit-transition: 300ms ease-out;
   transition: 300ms ease-out;
-  border-radius: 32px;
   z-index: var(--z-fixed);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -344,18 +342,115 @@ header .nav__links {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  row-gap: 24px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  row-gap: 30px;
   list-style: none;
   color: black;
 }
-@media (min-width: 620px) and (max-width: 768px) {
-  header .nav__links {
-    width: 60%;
+header .nav__links .flex__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 15px;
+  margin-top: 20px;
+}
+@media (min-width: 769px) {
+  header .nav__links .flex__buttons {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-column-gap: 20px;
+       -moz-column-gap: 20px;
+            column-gap: 20px;
+    margin-top: 35px;
+  }
+}
+header .nav__links .flex__buttons .button {
+  width: 180px;
+  font-size: 15px;
+}
+@media (min-width: 769px) {
+  header .nav__links .flex__buttons .button {
+    width: 215px;
+    font-size: 18px;
+  }
+}
+header .nav__links .flex__buttons .button i {
+  margin-left: 10px;
+  font-size: 15px;
+}
+@media (min-width: 769px) {
+  header .nav__links .flex__buttons .button i {
+    font-size: 18px;
+  }
+}
+header .nav__links .flex__buttons .alt i {
+  font-size: 22px;
+}
+@media (min-width: 769px) {
+  header .nav__links .flex__buttons .alt i {
+    font-size: 25px;
+  }
+}
+header .nav__links .social__media {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-column-gap: 20px;
+     -moz-column-gap: 20px;
+          column-gap: 20px;
+}
+@media (min-width: 769px) {
+  header .nav__links .social__media {
+    margin-top: 35px;
+    -webkit-column-gap: 25px;
+       -moz-column-gap: 25px;
+            column-gap: 25px;
+  }
+}
+header .nav__links .social__media a {
+  font-size: 32px;
+}
+@media (min-width: 769px) {
+  header .nav__links .social__media a {
+    font-size: 38px;
+  }
+}
+header .nav__links .social__media .facebook__link {
+  color: #3b5998;
+}
+header .nav__links .social__media .instagram__link {
+  color: #e5355b;
+}
+header .nav__links .social__media .linkedin__link {
+  color: #0077b5;
+}
+header .nav__links .nav__copyright {
+  font-size: 14px;
+  font-family: var(--paragraph-font);
+  line-height: 24px;
+  text-align: center;
+}
+@media (min-width: 769px) {
+  header .nav__links .nav__copyright {
+    font-size: 16px;
+  }
+}
+@media (min-width: 769px) {
+  header .nav__links .nav__copyright br {
+    display: none;
   }
 }
 @media (min-width: 769px) {
   header .nav__links {
-    width: 60%;
+    width: 70%;
   }
 }
 @media (min-width: 992px) {
@@ -375,9 +470,16 @@ header .nav__links {
     background-color: initial;
     border-radius: initial;
     color: black;
+    height: initial;
     gap: 30px;
   }
   header .nav__links .nav__close {
+    display: none;
+  }
+  header .nav__links .nav__link.mobile,
+  header .nav__links .flex__buttons,
+  header .nav__links .social__media,
+  header .nav__links .nav__copyright {
     display: none;
   }
 }
@@ -385,6 +487,7 @@ header .nav__links .nav__close {
   position: absolute;
   top: 20px;
   right: 20px;
+  padding: 8px;
   cursor: pointer;
 }
 header .nav__links .nav__close i {
@@ -398,7 +501,7 @@ header .nav__links li a {
 }
 @media (min-width: 769px) {
   header .nav__links li a {
-    font-size: 18px;
+    font-size: 20px;
   }
 }
 @media (min-width: 992px) {
