--- a/assets/scss/components/sections/_howitwork.scss
+++ b/assets/scss/components/sections/_howitwork.scss
@@ -84,7 +84,7 @@
 				width: initial;
 			}
 			&__number {
-				background: url(../svg/works/circle.svg) no-repeat;
+				background: url(../svg/accueil/works/circle.svg) no-repeat;
 				width: 65px;
 				height: 65px;
 				display: flex;
