--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -16,3 +16,9 @@
 @import 'components/sections/formules';
 @import 'components/sections/aventages';
 @import 'components/sections/footer';
+
+// PAGES
+@import 'pages/contact';
+@import 'pages/connexion';
+@import 'pages/inscription';
+@import 'pages/mentions-legales';
