--- a/assets/scss/globals/_layout.scss
+++ b/assets/scss/globals/_layout.scss
@@ -17,6 +17,10 @@ a {
 	display: flex;
 }
 
+::selection {
+	background-color: var(--first-color-very-dark);
+	color: white;
+}
 .full-height {
 	height: 100vh;
 	background-color: var(--first-color-very-light);
